--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "astro": "^5.7.13"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.7"
+    "@astrojs/tailwind": "^6.0.2",
+    "tailwindcss": "^3.4.17"
   }
 }
